Implemented GameSession creation, question answering, and validated gameplay flow